--- a/_gk_styles.css
+++ b/_gk_styles.css
@@ -1,6 +1,14 @@
-input.ui-button-text, button.ui-button-text{
+input.ui-button-text, button{
 	background: url("images/ui-bg_glass_75_7cbf0d_1x400.png") repeat-x scroll 50% 50% #7CBF0D;
     border: 1px solid #72AA13;
     color: #FFFFFF;
     font-weight: bold;
+}
+
+ul.productList li.resultsPLContainer {
+	height: 200px;
+	padding: 15px;
+	text-align: center;
+	background: white;
+	box-shadow: 3px 3px 8px rgba(0,0,0,.75);
 }
