Homepage - banner size fix, supplylist hooked in
+versioning

--- a/_gk_styles.css
+++ b/_gk_styles.css
@@ -77,7 +77,7 @@ input.ui-button-text, button{
 	text-align: center;
 }
 
-.bannerContainer {
+.prodBannerContainer {
 	height: 47px;
 	margin-bottom: 0px;
 }
