--- a/extensions/admin/medialib.css
+++ b/extensions/admin/medialib.css
@@ -6,19 +6,21 @@ table.mediaLibrary td	{padding:0; vertical-align:top;}
 
 table.mediaLibrary .leftCol	{width:25%;}
 
+.lazyImage {display:none;}
 
-#mediaLibFolderList	{width:25%;}
-#mediaLibFolderContainer li	{display:block; clear:both; margin-bottom:5px;}
+#mediaLibFolderList	{width:25%; font-size:.75em;}
+#mediaLibFolderContainer li	{display:block; clear:both; margin-bottom:5px;} /* folders */
 #mediaLibFolderContainer a	{display:block; padding:2px 0;}
 #mediaLibFolderContainer ul ul	{padding:0;}
 
-.mediaFiles li	{float:left; margin:10px; width:120px; height:150px; overflow:hidden; text-align:center;}
+.mediaFiles li	{float:left; margin:10px; width:120px; height:160px; overflow:hidden; text-align:center; font-size:.65em;}
 
 #mediaLibActionsBar .ui-menu { width: 200px; } /* for use in folder dropdown. not limited to this tho */
 
 .selectAddFolderChoices li	{margin: 3px; padding: 0.4em;}
 
-
+#mediaLibFolderContainer	{padding:12px;}
+#mediaLibFolderListUL	{margin-left:0;}
 
 #mediaLibFolderContainer, #mediaLibInfiniteScroller	{height:350px; overflow:auto;} /* actual height will get overwritten w/ JS. */
 
