Cart Formatting, Search Tag Exclusion, Secure Msg
Search Tag Exclusion needs tag added to index,

Search Msg needs test

--- a/_gk_styles.css
+++ b/_gk_styles.css
@@ -100,3 +100,11 @@ input.ui-button-text, button{
 .checkoutProdInfoContainer {
 	width: 50%;
 }
+
+#cartTemplateCostSummary div {
+	margin: 8px 0px;
+}
+
+#cartTemplateCostSummary {
+	margin-bottom: 30px;
+}
