Truck blend fix

--- a/_gk_styles.css
+++ b/_gk_styles.css
@@ -31,7 +31,7 @@ input.ui-button-text, button{
 
 .shiplatency {
 	text-align: center;
-	width: 100%;
+	padding-left: 42px;
 	font-weight: bold;
 	font-size: 1em;
 	background: url(images/gk09_icon_shipping-42x25.png) left center no-repeat;
