Revert "No Result Query background"
This reverts commit 9cae8b4cb6d42ad272e3ca3808128e6c3e59acef.

--- a/_gk_styles.css
+++ b/_gk_styles.css
@@ -118,3 +118,7 @@ input.ui-button-text, button{
 	padding: 5px;
 }
 
+.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited {
+    color: #666666;
+    text-decoration: none;
+}
