--- a/_gk_styles.css
+++ b/_gk_styles.css
@@ -167,3 +167,6 @@ input.ui-button-text, button{
 #checkoutOrderContainer {
 	width: 292px;
 }
+
+.paddingTop{padding-top: 12px;}
+.borderTop{ border-top: 1px dotted #999999;} 
