--- a/extensions/admin/user.css
+++ b/extensions/admin/user.css
@@ -1,9 +1,5 @@
 
-/* the container for the detail column. */
-.dualModeDetailContainer	{float:right; display:none;}
 
-.dualModeListContainer .heading	{text-indent:12px; line-height:35px;}
-.dualModeListContainer .buttonSet	{float:right; vertical-align:middle; margin:3px;}
 
 
 /* turns of the detail column in the roles table while editing due to space constraints. */
@@ -12,7 +8,7 @@
 /* will hide the expand/collapse button for a panel when in list mode */
 .collapsed .ui-button-anypanel-toggle	{display:none;}
 
-.ulAsCSV ul	{margin:0; padding:0; list-style:none;}
+ul.ulAsCSV 	{margin:0; padding:0; list-style:none;}
 .ulAsCSV li	{margin:0; padding:0; float:left;}
 .ulAsCSV li:after	{content:", "}
 .ulAsCSV li:last-child:after	{content:""}
