--- a/_gk_styles.css
+++ b/_gk_styles.css
@@ -183,3 +183,7 @@ input.ui-button-text, button{
     color: #FFFFFF;
     font-weight: bold;
 }
+
+.checkoutFormContainer fieldset {
+	background: white;
+}
