--- a/_redirect_styles.css
+++ b/_redirect_styles.css
@@ -1,4 +1,4 @@
-ui-button.ui-state-default.ui-button-text-only{
+.ui-button.ui-state-default.ui-button-text-only{
     background: linear-gradient(to bottom, #1E5799 0%, #2989D8 50%, #207CCA 51%, #7DB9E8 100%) repeat scroll 0 0 transparent;
     border: medium none;
     box-shadow: 0 2px 4px 1px #000000;
