redirect modal text color and padding fix

--- a/_redirect_styles.css
+++ b/_redirect_styles.css
@@ -23,6 +23,9 @@
 
 .ui-dialog .ui-dialog-content.redirectToSiteApp, 
 .ui-dialog .ui-dialog-content.autoRedirectToSiteApp {
+	color: #FFFFFF;
     background: url("images/body_bg-9x7.gif") repeat scroll 0 0 transparent;
     font-family: MyriadPro-Regular,'Myriad Pro Regular',MyriadPro,'Myriad Pro',Helvetica,Arial,sans-serif;
 }
+
+.ui-dialog { padding: 0px; }
