redirect modal font size fix

--- a/_redirect_styles.css
+++ b/_redirect_styles.css
@@ -29,3 +29,8 @@
 }
 
 .ui-dialog { padding: 0px; }
+
+.ui-dialog .ui-dialog-content.redirectToSiteApp h3, 
+.ui-dialog .ui-dialog-content.autoRedirectToSiteApp h3 {
+	font-size: 1em;
+}
