--- a/_redirect_styles.css
+++ b/_redirect_styles.css
@@ -34,5 +34,5 @@
 .ui-dialog .ui-dialog-content.autoRedirectToSiteApp h3 {
 	font-size: 1em;
 	color: #FFFFFF;
-	margin: 10px 0px;
+	margin: 20px;
 }
